<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chalkboard"
    tools:context=".ConvertActivity">

    <EditText
        android:id="@+id/inputNumberConvert"
        style="@style/whiteEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/input_number"
        android:inputType="number|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/convertRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/inputNumberConvert"
        app:layout_constraintStart_toStartOf="@+id/inputNumberConvert"
        app:layout_constraintTop_toBottomOf="@+id/inputNumberConvert">

        <RadioButton
            android:id="@+id/cardinalRadioBtn"
            style="@style/whiteRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cardinal" />

        <RadioButton
            android:id="@+id/ordinalRadioBtn"
            style="@style/whiteRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordinal" />

        <RadioButton
            android:id="@+id/collectivelRadioBtn"
            style="@style/whiteRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collective" />

        <CheckBox
            android:id="@+id/animacyCheckbox"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:buttonTintMode="src_atop"
            android:checked="false"
            android:fontFamily="@font/bad_script"
            android:text="@string/animacy"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/convertNumBtn"
        style="@style/paperButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/convert_num"
        app:layout_constraintEnd_toEndOf="@+id/convertRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/convertRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/convertRadioGroup" />

    <WebView
        android:id="@+id/resultsWebview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertNumBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>